--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,45 @@
-# dependencies
-node_modules/
-
-# IDE
-/.vscode
-
-# misc
-.DS_Store
-lerna-debug.log
-npm-debug.log
-yarn-error.log
-**/npm-debug.log
-
 # environment
 .env
 
-# build
-/dist
+/database
+/test_database
 
+# compiled output
+/dist
+/node_modules
+uploads
+pnpm-lock.yaml
+tokens.json
+.env
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+
+# Tests
 /coverage
 /.nyc_output
 build/config\.gypi
 
-/database
-/test_database
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
